[package]
name = "html-parser"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/H1ghBre4k3r/html-parser"

[workspace]
members = ["crates/lachs", "crates/lachs_derive"]

[dependencies]
lachs = { path = "./crates/lachs/" }
