[package]
name = "html-parser"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/H1ghBre4k3r/html-parser"
description = "Fast and simple (and hopefully at some point spec compliant) HTML parser."

[workspace]
members = ["./crates/tokenkind/"]

[dependencies]
lachs = { version = "0.1.3" }
tokenkind = { path = "./crates/tokenkind/" }
