[package]
name = "lachs"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "MIT"
readme = "README.md"
description = "Crate for automatically creating a lexer based on a given enum."

[dependencies]
colored = "2.1.0"
lachs_derive = { path = "../lachs_derive/" }
regex = "1.11.1"
